<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant Finder</string>
    <string name="category">Food Category</string>
    <string name="labelcategoryfood">Food Category</string>
    <string name="labelstate">State</string>
    <string name="labelcity">City</string>
    <string name="labellistrestaurants">List of Restaurants</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="action_settings">Settings</string>
    
    <string name="hello_world">Authentification</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login:</string>
    <string name="attempts">Attempts Left:</string>
    
    <string-array name="food_category">
	</string-array>
	    
    <string-array name="city">
    </string-array>

</resources>
