<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.restaurantsearchengine.MainActivity"
    android:weightSum="1" >

    <!-- Logout -->
    <ImageButton android:id="@+id/logout" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:layout_marginTop="0dp"
    	android:gravity="end"
    	android:background="@drawable/logout"></ImageButton>
    
    <!-- Category Food -->
    
    <LinearLayout
    android:id="@+id/categoryfood"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:weightSum="1">
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight=".5"
	        android:textStyle="bold"
	        android:text="@string/labelcategoryfood" />
	    
	    <Spinner
	        android:id="@+id/spinner1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight=".5"
	        android:entries="@array/food_category"
	        android:prompt="@string/category" />
	</LinearLayout>
	
  
    <!-- State -->
    
    <LinearLayout
    android:id="@+id/state"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:weightSum="1">
	    
        <TextView
	        android:id="@+id/textView2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight=".5"
	        android:textStyle="bold"
	        android:text="@string/labelstate" />
	    
	    <Spinner
	    android:id="@+id/spinner2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight=".5"
	    android:prompt="@string/state" />
	</LinearLayout>
	
    
     <!-- city -->
    
    <LinearLayout
    android:id="@+id/city"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:weightSum="1">
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight=".5"
	        android:textStyle="bold"
	        android:text="@string/labelcity" />
	    
	    <Spinner
	        android:id="@+id/spinner3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight=".5"
	        android:entries="@array/city"
	        android:prompt="@string/city" />
	</LinearLayout>

   
    <ImageButton android:id="@+id/searchbutton" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:layout_marginTop="140dp"
    	android:layout_gravity="center_vertical|center_horizontal"
    	android:background="@drawable/search"></ImageButton>

</LinearLayout>
